program-libs/zero-copy-derive/tests/ui/fail/missing_repr_c.stderr
error: ZeroCopy requires #[repr(C)] attribute for memory layout safety. Add #[repr(C)] above the zerocopy declaration.
 --> tests/ui/fail/missing_repr_c.rs:4:10
  |
4 | #[derive(ZeroCopy)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `ZeroCopy` (in Nightly builds, run with -Z macro-backtrace for more info)
